--- a/GameEngineContents/GameEngineContents.vcxproj
+++ b/GameEngineContents/GameEngineContents.vcxproj
@@ -172,6 +172,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EditGui.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="EditLevel.h">
       <SubType>
       </SubType>
@@ -208,6 +212,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="DFICore.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="EditGui.cpp">
       <SubType>
       </SubType>
     </ClCompile>
