--- a/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -28,6 +28,9 @@
     <ClInclude Include="EditLevel.h">
       <Filter>Levels</Filter>
     </ClInclude>
+    <ClInclude Include="EditGui.h">
+      <Filter>Object</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DFICore.cpp" />
@@ -55,6 +58,9 @@
     </ClCompile>
     <ClCompile Include="EditLevel.cpp">
       <Filter>Levels</Filter>
+    </ClCompile>
+    <ClCompile Include="EditGui.cpp">
+      <Filter>Object</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
