--- a/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -35,7 +35,7 @@
       <Filter>Levels\EditLevel\Obj</Filter>
     </ClInclude>
     <ClInclude Include="CenterLevel.h">
-      <Filter>Levels\CenterLevel</Filter>
+      <Filter>Levels\EditLevel\CenterLevel</Filter>
     </ClInclude>
     <ClInclude Include="Tiles.h">
       <Filter>Levels\EditLevel\Obj</Filter>
@@ -75,7 +75,7 @@
       <Filter>Levels\TitleLevel\Obj</Filter>
     </ClCompile>
     <ClCompile Include="CenterLevel.cpp">
-      <Filter>Levels\CenterLevel</Filter>
+      <Filter>Levels\EditLevel\CenterLevel</Filter>
     </ClCompile>
     <ClCompile Include="Tiles.cpp">
       <Filter>Levels\EditLevel\Obj</Filter>
@@ -109,7 +109,7 @@
     <Filter Include="PublicObject">
       <UniqueIdentifier>{df11f953-5c45-4952-85fb-a35bec5d2a60}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Levels\CenterLevel">
+    <Filter Include="Levels\EditLevel\CenterLevel">
       <UniqueIdentifier>{b9cbe269-9b4d-482a-bca6-90b7d293f58a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
